RESOLVED FIXED17549
REGRESSION: 50+ layout test failures resulting from r30584
https://bugs.webkit.org/show_bug.cgi?id=17549
Summary REGRESSION: 50+ layout test failures resulting from r30584
Darin Fisher (:fishd, Google)
Reported 2008-02-26 00:40:22 PST
REGRESSION: 50+ layout test failures resulting from r30584 http://build.webkit.org/builders/trunk-mac-ppc-release/builds/11130/steps/layout-test/logs/stdio The problem is an uninitialized variable. Patch coming up.
Attachments
patch v1 (1.79 KB, patch)
2008-02-26 00:49 PST, Darin Fisher (:fishd, Google)
eric: review+
Darin Fisher (:fishd, Google)
Comment 1 2008-02-26 00:49:29 PST
Created attachment 19371 [details] patch v1
Eric Seidel (no email)
Comment 2 2008-02-26 00:50:38 PST
Comment on attachment 19371 [details] patch v1 r=me
Eric Seidel (no email)
Comment 3 2008-02-26 00:56:52 PST
Note You need to log in before you can comment on or make changes to this bug.