third_party/WebKit/WebCore/platform/network/mac/ResourceResponse.h
@@ -55,6 +55,7 @@ public:
     
     ResourceResponse(const KURL& url, const String& mimeType, long long expectedLength, const String& textEncodingName, const String& filename)
         : ResourceResponseBase(url, mimeType, expectedLength, textEncodingName, filename)
+        , m_isUpToDate(true)
     {
     }
 
